--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    width: 1200px;
+    margin: 2rem auto; 
+}
+.site_header{
+    background-color: #E579E6;
+    height: 140px;
+}
+.preview{
+    background-color: #E1D67A;
+    height: 500px;
+    margin:30px 0;
+}
